--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "gatsby": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby": "^2.13.76",
+    "gatsby-plugin-manifest": "^2.2.8",
+    "gatsby-plugin-offline": "^3.0.6",
+    "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sitemap": "^2.2.22",
     "gatsby-source-storyblok": "^0.2.6",
     "gatsby-storyblok-image": "^0.2.2",
