--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "1.0.0",
   "author": "Tassos Lambrou",
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "7",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-flowtype": "5",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "gatsby": "^2.13.76",
     "gatsby-plugin-manifest": "^2.2.8",
     "gatsby-plugin-offline": "^3.0.6",
